Fixed bullet point formatting
Indents correctly and doesn't have extra space at bottom now

--- a/nightmod.css
+++ b/nightmod.css
@@ -1,4 +1,4 @@
-@import "mermaid.dark.css";
+@import "night/mermaid.dark.css";
 
 :root {
 
@@ -228,8 +228,9 @@ audio:not([controls]) {
 
 ul,
 ol {
-    padding: 0 0 0 1.875rem;
-    /* 30px */
+    padding: 0 0 0 0rem;
+    margin-left: 1rem;
+    margin-bottom: 0rem;
 }
 
 ul {
